# smithy-rs-service-config

./: Cargo.toml
sdk/: Cargo.toml
sdk/src/: input.rs  lib.rs  operation.rs  operation_shape.rs  output.rs  protocol_serde.rs  server.rs  service.rs  types.rs
sdk/src/protocol_serde/: shape_operation.rs  shape_operation_output.rs
service/: Cargo.toml
service/src/: main.rs
